# titan-distributed-sqlite

./: .gitignore  Cargo.toml  README.md  build_log.txt  demo.py  err.txt  project_readme.md  test-fixture.wal
.agent/workflows/: add-http-api.md  build.md  develop.md  fix-warnings.md  test.md
.github/workflows/: build-binaries.yml  pypi-publish.yml
clients/python/: README.md  demo.py  pyproject.toml  titan_db.py  titan_node_cli.py  titan_server.py
cmd/titan-node/: Cargo.toml
cmd/titan-node/src/: main.rs
cmd/titan-node/static/: index.html
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/raft-core/: Cargo.toml
crates/raft-core/src/: lib.rs  rpc.rs  store.rs
crates/rpc-api/: Cargo.toml
crates/rpc-api/src/: lib.rs
crates/snapshotter/: Cargo.toml
crates/snapshotter/src/: lib.rs
crates/sqlite-adapter/: Cargo.toml
crates/sqlite-adapter/src/: lib.rs
crates/wal-replicator/: Cargo.toml
crates/wal-replicator/src/: lib.rs
deploy/docker/: docker-compose.yml
docs/: PHASE1_STATUS.md  ROADMAP.md  ROADMAP_90_DAYS.md  TICKETS_MVP.md
docs/architecture/: ARCHITECTURE.md
examples/embedded-app/: Cargo.toml
examples/embedded-app/src/: main.rs
examples/todo_app_python/: app.py
tests/integration/: real_sample.wal  wal_batch_fixture.txt
