[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-db"
version = "0.1.0"
description = "Python client for Titan Distributed SQLite"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[tool.setuptools]
py-modules = ["titan_db"]

[project.urls]
Homepage = "https://github.com/Yogendra-sodha/titan-distributed-sqlite"
Repository = "https://github.com/Yogendra-sodha/titan-distributed-sqlite"
