[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-db"
version = "0.2.0"
description = "Python client & server manager for Titan Distributed SQLite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.scripts]
titan-server = "titan_server:_cli"

[tool.setuptools]
py-modules = ["titan_db", "titan_server"]

[project.urls]
Homepage = "https://github.com/Yogendra-sodha/titan-distributed-sqlite"
Repository = "https://github.com/Yogendra-sodha/titan-distributed-sqlite"
