[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titan-db"
version = "0.3.4"
description = "Python client & server manager for Titan Distributed SQLite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.scripts]
titan-server = "titan_server:_cli"
titan-node = "titan_node_cli:main"

[tool.setuptools]
py-modules = ["titan_db", "titan_server", "titan_node_cli"]

[project.urls]
Homepage = "https://github.com/Yogendra-sodha/titan-distributed-sqlite"
Repository = "https://github.com/Yogendra-sodha/titan-distributed-sqlite"
