[package]
name = "titan-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlite-adapter = { path = "../../crates/sqlite-adapter" }
wal-replicator = { path = "../../crates/wal-replicator" }
raft-core = { path = "../../crates/raft-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
